Prevent squashing on the account icon
This uses a css property with background-size: cover instead of a
image tag with a fixed width and height.

--- a/modules/portal/app/assets/css/portal/_style.scss
+++ b/modules/portal/app/assets/css/portal/_style.scss
@@ -1030,6 +1030,15 @@ ul.pagination {
   width: 100%;
 }
 
+.user-img-icon {
+  float: left;
+  height: $margin-md;
+  width: $margin-md;
+  background-size: cover;
+  background-position: left;
+  margin-right: $margin-xs;
+}
+
 .user-list {
   a.gravitar {
     background-color: $ehri-gray;
